# ChatServer

./: CMakeLists.txt  README.md  autoBuild.sh
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: db.hpp
include/server/model/: friendmodel.hpp  offlinemsgmodel.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  offlinemsgmodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
